@@ -6482,3 +6482,49 @@ exports.uidr = function() {
 
 	return builder + RANDOM_STRING[sum] + 'r'; // "r" version
 };
+
+exports.paginate = function(page, pages, max) {
+
+	if (!page)
+		page = 1;
+
+	let response = {};
+
+	response.page = page;
+	response.count = pages;
+	response.next = (page + 1) < pages ? (page + 1) : null;
+	response.prev = (page - 1) > 0 ? (page - 1) : null;
+	response.first = 1;
+	response.last = pages;
+	response.visible = pages > 1;
+	response.pages = [];
+
+	if (!max) {
+		for (let i = page; i < pages + 1; i++)
+			response.pages.push(i);
+		return response;
+	}
+
+	let half = Math.floor(max / 2);
+	let pageFrom = page - half;
+	let pageTo = page + half;
+	let plus = 0;
+
+	if (pageFrom <= 0) {
+		plus = Math.abs(pageFrom);
+		pageFrom = 1;
+		pageTo += plus;
+	}
+
+	if (pageTo >= pages) {
+		pageTo = pages;
+		pageFrom = pages - max;
+		if (pageFrom <= 0)
+			pageFrom = 1;
+	}
+
+	for (let i = pageFrom; i < (pageTo + 1); i++)
+		response.pages.push(i);
+
+	return response;
+};
